# iatromante

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-stack.yml  flake.nix  pyproject.toml
.github/workflows/: docker-publish.yml  docker.yml
config/: pathologies.yaml
docker/: entrypoint.sh
docs/: README.md  architecture.md  data-and-rights.md  decisions.md  deployment.md  roadmap.md
feed/: __init__.py  cli.py  cluster.py  dedup.py  embed.py  fulltext.py  index.py  models.py  openaccess.py  store.py
feed/sources/: __init__.py  base.py  clinicaltrials.py  europepmc.py  openalex.py  preprints.py  pubmed.py
webapp/: __init__.py  app.py
webapp/static/: app.js  index.html  style.css
