[project]
name = "iatromante"
version = "0.1.0"
description = "Continuously-updated, in-repo corpus of the literature on selected pathologies (endometriosis, lipedema, fibromyalgia), structured for LLM consumption."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    # semantic ("deep") search: local embeddings + in-SQLite vector store
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
]

[project.scripts]
feed = "feed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feed"]
