[project]
name = "iatromante"
version = "0.1.0"
description = "Continuously-updated, in-repo corpus of the literature on selected pathologies (endometriosis, lipedema, fibromyalgia), structured for LLM consumption."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    # semantic ("deep") search: local embeddings + in-SQLite vector store
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    # web app (self-hosted browse/search/map UI)
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# offline pipeline only (topic clustering + 2D map projection); NOT needed to serve.
# install with `uv sync --extra analysis` on the machine that runs `feed cluster`.
analysis = [
    "scikit-learn>=1.4",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.38",
]

[project.scripts]
feed = "feed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feed"]
